--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -9,7 +9,7 @@
   </head>
   <body>
     <input id="id" type="text" placeholder="아이디" /><br />
-    <input id="password" type="text" placeholder="비밀번호" /><br />
+    <input id="password" type="password" placeholder="비밀번호" /><br />
     <button>로그인</button>
   </body>
 </html>
